Bug 164722 - LibreOffice Calc doesn't show window for managing conditional formatting after undoing adding conditional formatting
Summary: LibreOffice Calc doesn't show window for managing conditional formatting afte...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.2.5.2 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.8.0 target:25.2.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Conditional-Formatting
  Show dependency treegraph
 
Reported: 2025-01-15 16:44 UTC by Johannes
Modified: 2025-02-19 15:14 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (15.98 KB, application/vnd.oasis.opendocument.spreadsheet)
2025-01-15 16:45 UTC, Johannes
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes 2025-01-15 16:44:20 UTC
Description:
After adding a color scale (conditional formatting) to cells and then undoing that action, it isn't possible to open the window for adding/managing conditional formatting.

Steps to Reproduce:
1. Open attached file
2. Select column A
3. Add a color scale: Format > Conditional > Color Scale
4. Click on 'OK' > the color scale is applied
5. Undo this action: Edit > Undo
6. Select column A
7. Try to add a color scale: Format > Conditional > Color Scale

Actual Results:
Nothing: the window for adding (managing) conditional formatting doesn't show.

Note that the conditional formatting doesn't show up (correctly!) in the manage window after clicking Format > Conditional > Manage

Expected Results:
The window for adding (managing) conditional formatting is showed.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Also tested with 25.8.0.0.alpha0+, but same result.
Comment 1 Johannes 2025-01-15 16:45:02 UTC
Created attachment 198559 [details]
Example file
Comment 2 Johannes 2025-01-15 18:11:25 UTC
Note that it is possible to add a color scale to another column (B). After that, some zooming in/out the color scale of column A is shown again! However, in the manager the conditional formatting of column A is not shown.
Comment 3 m_a_riosv 2025-01-16 01:29:20 UTC
Reproducible
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 590157ac1584fb829b0c61905298114e7c4adfde
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: en-US (es_ES); UI: en-US
Calc: CL threaded

First version that fails on the ones I have installed.
Version: 24.2.5.1 (X86_64) / LibreOffice Community
Build ID: 2ccb78ad6bdfe3f3356a7a7f294ec388775c5816
CPU threads: 16; OS: Windows 10.0 Build 26100; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded

Latest version that works on the ones I have installed.
Version: 24.2.4.2 (X86_64) / LibreOffice Community
Build ID: 51a6219feb6075d9a4c46691dcfe0cd9c4fff3c2
CPU threads: 16; OS: Windows 10.0 Build 26100; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: CL threaded
Comment 4 Saburo 2025-01-18 07:13:06 UTC
repro
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c9ae567c791bcffdc3fff9e3fb11b46275a13d2b
CPU threads: 12; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded

bibisected
https://git.libreoffice.org/core/+/c492de66a077f3a2a960209b0b8b278b3901f361%5E%21
Comment 5 Johannes 2025-01-20 11:33:49 UTC
Mike, can you please have a look at this bug?
Comment 6 Mike Kaganski 2025-01-20 12:42:15 UTC
https://gerrit.libreoffice.org/c/core/+/180507
Comment 7 Commit Notification 2025-01-20 14:05:09 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9916469fa9ff48340cfe317269f259b50e4ecd21

tdf#164722: fix the "contains conditional format" condition

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Johannes 2025-01-21 12:07:43 UTC
Tested, some progress, but not all right.

Steps to reproduce:
1. Open attached file
2. Select column A
3. Add a color scale: Format > Conditional > Color Scale
4. Click on 'OK' > the color scale is applied
5. Undo this action: Edit > Undo
6. Select column B
7. Add a color scale: Format > Conditional > Color Scale
8. Click on 'OK' > the color scale is applied
9. Scroll or zoom the window

Result: the conditional formatting of column A is visible again! However, in the window for managing conditional formatting column A isn't visible.


Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f1bdc5b77406fadb97c9a54f0a06d5cafbdf0371
CPU threads: 4; OS: Linux 6.12; UI render: default; VCL: kf5 (cairo+wayland)
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded
Comment 9 Mike Kaganski 2025-01-21 12:37:22 UTC
(In reply to Johannes from comment #8)

Do you see the problem from comment 0? Please file everything else as a new bug report.
Comment 10 Johannes 2025-01-21 13:53:21 UTC
Thanks! See https://bugs.documentfoundation.org/show_bug.cgi?id=164785
Comment 11 Commit Notification 2025-01-22 12:22:27 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/b9101796485f301b9c382629de9aaa24e1d1091b

tdf#164722: fix the "contains conditional format" condition

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2025-02-19 15:14:03 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4e37feb060c2a5c823d1e762a87bdca09995f480

tdf#164722: sc: Add UItest

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.